# app/http/swagger/swagger.json
@@ -63,9 +63,65 @@
                     }
                 }
             }
+        },
+        "/user/amount": {
+            "post": {
+                "description": "更改金额",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ChangeAmount"
+                ],
+                "summary": "更改金额",
+                "operationId": "ChangeAmount",
+                "parameters": [
+                    {
+                        "description": "查询详情请求参数",
+                        "name": "ChangeAmountParam",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.ChangeAmountParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "返回成功的流程定义数据",
+                        "schema": {
+                            "$ref": "#/definitions/base.Result"
+                        }
+                    },
+                    "500": {
+                        "description": "操作失败",
+                        "schema": {
+                            "$ref": "#/definitions/base.Result"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "base.Result": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "demo.UserDTO": {
             "type": "object",
             "properties": {
@@ -74,6 +130,17 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "user.ChangeAmountParam": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
